# ExpeGraph

./: .gitattributes  .gitignore  ExpeGraph.sln  README.md  ReadMe.md
chatbot/: pyproject.toml
chatbot/manuals/: 2461-901-01_A_Nov_2015_Ref.pdf:Zone.Identifier
data_management/: .bashrc.swp  .gitignore  DataManagement.csproj  DotnetBE.http  Program.cs  appsettings.json
data_management/Controllers/: BatchesController.cs  DeviceParametersController.cs  DevicesController.cs  DiodesController.cs  EquipmentController.cs  LabsController.cs  LabsEquipmentController.cs  LabsProjectsController.cs  MeasurementsController.cs  PermissionsController.cs  ProjectsController.cs  ResistorsController.cs  RolesController.cs  RolesPermissionsController.cs  SamplesController.cs  TlmsController.cs  TransistorsController.cs  UserLabsControllers.cs  UserProjectsController.cs  UsersController.cs  UsersRolesController.cs
data_management/Data/: AppDbContext.cs
database/: .gitignore  260310_Samples_DropBatchIdNotNull.sql  260311_Projects_ProjectNameTypeToText.sql  260314_DiodeTransRes_RemoveName.sql  ExpeGraphDB.mwb  ExpeGraphDB.mwb.bak  ExpeGraphDB_BuildingScript.sql  ExpeGraphDB_PostgreSQL.sql
docs/: NamingConventions.md  Notes.txt
experiment/: .gitignore  KL2400.ipynb  Model2461.ipynb  Model2675A.ipynb  main.py  measurement_data.csv  pyproject.toml
experiment/250327_Fab241201_IrOxNewSM/Dev08/H02/: Sweep3H02Star0_Stop1.5_Step0.01.csv  Sweep4H02Star0_StopM1.5_StepM0.01.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  (+3 more)
graphing/: .gitignore
(+90 files in other folders)
