[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
