[project]
name = "experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "pyqt6>=6.11.0",
    "pyvisa>=1.16.2",
    "pyvisa-py>=0.8.1",
    "requests>=2.32.5",
    "uvicorn>=0.44.0",
]
